[build-system]
requires = ["uv_build>=0.9.5"]
build-backend = "uv_build"

[project]
name = "fast_foundation_stereo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "einops>=0.8.2",
  "imageio>=2.37.0",
  "numpy>=1.26.0",
  "nvidia-modelopt[onnx,torch]>=0.44.0",
  "omegaconf>=2.3.1",
  "onnx>=1.21.0",
  "onnxruntime-gpu>=1.22.0",
  "onnxscript>=0.7.0",
  "open3d>=0.19.0",
  "opencv-contrib-python>=4.13.0.92",
  "pyorbbecsdk2>=2.0.18",
  "pyyaml>=6.0.2",
  "scikit-image>=0.26.0",
  "scipy>=1.15.3",
  "tensorrt-cu12==11.0.0.114",
  "tensorrt-dispatch-cu12==11.0.0.114",
  "tensorrt-lean-cu12==11.0.0.114",
  "timm>=1.0.27",
  "torch==2.9.0",
  "torchvision==0.24.1",
  "tyro>=1.0.13",
  "viser>=1.0.30",
  "xformers>=0.0.35",
]


[tool.uv]
override-dependencies = [
  "torch==2.9.0", # for rtx 5090
  "torchvision==0.24.1", # for rtx 5090
]
